# SocketDataSharing

./: CMakeLists.txt  LICENSE
scripts/: README.txt
scripts/windows/: Android NDK full path.txt  Android Studio Guide.txt  Generate Unix makefiles for Android.bat  Generate VS2022 solution for Windows.bat  README.txt
source/android/source/: ErrorHandlerAndroidDefinitions.cpp  SocketDataSharing.cpp
source/common/include/: ErrorHandler.hpp  InternalEndiannessConversions.hpp  InternalTypeUtils.hpp  PortConstants.hpp  State.hpp  SystemIncludeDefine.hpp
source/common/include/Interface/: EndiannessConversions.hpp  Error.hpp  SocketDataSharing.hpp
source/common/include/Interface/IndirectIncludes/: SocketDataSharingAPIDefine.hpp  TypeUtils.hpp  Types.hpp
source/common/include/Interface/IndirectIncludes/TypeUtils/: IPv4AddressUtils.hpp  IPv6AddressUtils.hpp
source/common/include/InternalTypeUtils/: InternalIPv4AddressUtils.hpp  InternalIPv6AddressUtils.hpp
source/common/include/Utilities/: Buffer.hpp  Range.hpp
source/common/source/: EndiannessConversions.cpp  Error.cpp  ErrorHandler.cpp  State.cpp
source/common/source/InternalTypeUtils/: InternalIPv4AddressUtils.cpp  InternalIPv6AddressUtils.cpp
source/common/source/TypeUtils/: IPv4AddressUtils.cpp  IPv6AddressUtils.cpp
source/common/source/Utilities/: Buffer.cpp
source/windows/include/: WinAPI.hpp
source/windows/source/: ErrorHandlerWindowsDefinitions.cpp  SocketDataSharing.cpp
